ui updated in mobile version